# reservoir

./: Cargo.toml  README.md  reservoir.toml  setup.sh
db/: reservoir.db  reservoir.db-shm  reservoir.db-wal
sql/: create_table_machines.sql  create_table_members.sql  create_table_reservations.sql  create_table_users.sql
sqlite/: create_table_reservations.sql  create_table_resources.sql
sqlite/lib/: libsqlite3.la
sqlite/lib/pkgconfig/: sqlite3.pc
src/: controllers.rs  main.rs  models.rs  objects.rs  reservoir_errors.rs  response.rs  structs.rs  utils.rs
src/db_handler/: init.rs  mod.rs  reservation.rs  resource.rs  user.rs
src/handlers/: mod.rs  reservation.rs  resource.rs  utils.rs
src/model/: mod.rs  reservation.rs
src/url_handler/: mod.rs  reservation.rs  resource.rs  user.rs
