[package]
name = "reservoir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls", "sqlite", "chrono" ] }
actix-web = "3"
actix-files = "0.5.0"
sha2 = "0.9.8"