[package]
name = "reservoir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite", "chrono" ] }
actix-web = "4"
actix-files = "0.6"
sha2 = "0.10"
toml = "0.7"
actix-cors = "0.6"